added join_features app

--- a/scripts.python/run-spark-local/catalyst_udf_test.ipynb
+++ b/scripts.python/run-spark-local/catalyst_udf_test.ipynb
@@ -228,7 +228,7 @@
     "from dmgrinder.apps.utils.control.luigix import ControlApp, ControlDynamicOutputPySparkTask\n",
     "\n",
     "from dmgrinder.apps.utils.common.spark import (\n",
-    "    GrinderUDFLibrary,\n",
+    "    CustomUDFLibrary,\n",
     "    union_all,\n",
     "    join_filter,\n",
     "    read_orc_table,\n",
